--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,13 @@ services:
     environment:
       - N8N_LOG_LEVEL=debug
       - N8N_METRICS=true
+      - NODE_FUNCTION_ALLOW_EXTERNAL=*
+      - N8N_CUSTOM_EXTENSIONS=/home/node/.n8n/custom
+      - OPENAI_API_KEY=sk------
+      - LANGFUSE_PUBLIC_KEY=pk-------
+      - LANGFUSE_SECRET_KEY=sk-------
+      - LANGFUSE_HOST=http://host.docker.internal:3001  
+      - OLLAMA_BASE_URL=http://host.docker.internal:11434
+    volumes:
+      - ./n8n-data:/home/node/.n8n
+      - ./n8n-custom/custom:/home/node/.n8n/custom
